Fixed IRC chat spacing

--- a/style.css
+++ b/style.css
@@ -160,11 +160,7 @@ use[href$="upper_badge_masks"] {
 /*** IRC ***/
 
 /* Bot tag */
-[class^="botTag"] {
-    display:none;
-}
-/* Bot chat bubble */
-[class^="botTag"] + [class^="username-"] {
+[class*="hasSystemTag"] {
     display:none;
 }
 /* Margin between name and message */
